refactor!: remove "searchableArea" from ES mapping